syntax = "proto3";


package helloworld;

option java_multiple_files = true;
option java_string_check_utf8 = true;
option java_package = " com.matjamr.api.internal";
option java_outer_classname = "GreeterProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}